Fixed text wrapping issue on quizApp.html and container sizing on quizStart.html

--- a/GitHub/firstQuizApp/quiz.CSS
+++ b/GitHub/firstQuizApp/quiz.CSS
@@ -11,7 +11,7 @@ html, body{
 #start-container{
     background-color: #F1F1F1;
     width: 300px;
-    height: 15rem;
+    height: 30rem;
     text-align: center;
     margin: auto;
     display: block;
@@ -19,6 +19,7 @@ html, body{
     border: 1px solid #4CAF4F;
     margin-top: 200px;
     border-radius: 25px;
+    line-height: 4rem
 }
 
 
@@ -32,32 +33,36 @@ html, body{
 #quiz {
     margin-left: 20px;
     margin-right: 20px;
+    min-width: 482px;
 
 }
 
 .choice-container{
     background-color: #F1F1F1;
-    margin-bottom: 5px;
+    margin-bottom: 1rem;
     width: 100%;
     height: 4rem;
+    display: flex;  
+    align-items: center; 
+    
 }
 
 .choice-prefix {
     background-color: #4CAF4F;
     color: white;
-   width: 55px;
-   height: 100%;
-   margin: auto;
-   text-align: center;
-   display: inline-block;
-   font-size: 2rem;
-   line-height: 60px;
+    height: 100%;
+    padding: 1.5rem, 2.5rem;
+    width: 3.5rem;
+    text-align: center;
+    line-height: 4rem;
+    font-size: 2rem;
+
 }
 
 .choice-text {
-  font-size: 20px;
-  width: 100%;
-  height: 100%;
+ padding: 1.5rem;
+ font-size: 20px;
+ width: 100%;
 
 }
 
